Fixed login Fixed auth with Google, Facebook, Twitter Fixed spacing issue bellow navbar Fixed Delete button in My Library

--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -328,5 +328,11 @@
     right: 115px;
   }
 }
-
+.errorMsg {
+  color: #FFFFFF;
+  position: absolute;
+  top: 42%;
+  left: 32%;
+  font-size: 15px;
+}
 
